[gd_scene load_steps=2 format=3 uid="uid://crdlgbox001"]

[ext_resource type="Script" path="res://scenes/ui/dialogue_box.gd" id="1_dlg"]

[node name="DialogueBox" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_dlg")

[node name="DialoguePanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -200.0
offset_right = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="DialoguePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 14

[node name="VBox" type="VBoxContainer" parent="DialoguePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SpeakerLabel" type="Label" parent="DialoguePanel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "Speaker"

[node name="TextLabel" type="RichTextLabel" parent="DialoguePanel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
bbcode_enabled = true
text = "Dialogue text goes here..."
fit_content = true

[node name="ChoicesContainer" type="VBoxContainer" parent="DialoguePanel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4

[node name="ContinueIndicator" type="Label" parent="DialoguePanel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "[Space / Click to continue]"
horizontal_alignment = 2
